# HoneyLink

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TASK_4.3_COMPLETE_REPORT.md  TODO-old-server.md  TODO.md  honeylink.toml.example  rust-toolchain.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: 補完レビュー計画書.md
.github/workflows/: attendance-reminder.yml  ci.yml  docs.yml  rust-ci.yml  ui-ci.yml
backend/: Cargo.toml
backend/migrations/: 20250101000001_initial_schema.sql  20250102000001_sessions_schema.sql
backend/src/: config.rs  error.rs  main.rs  types.rs  validation.rs  vault.rs
backend/src/db/: audit.rs  devices.rs  mod.rs  pairing.rs  sessions.rs
backend/src/middleware/: auth.rs  cors.rs  mod.rs  mtls.rs  rate_limit.rs  tracing.rs
backend/src/routes/: audit.rs  devices.rs  mod.rs  policies.rs  sessions.rs
backend/tests/: integration_tests.rs
crates/: README.md
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  events.rs  lib.rs  traits.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aead.rs  key_agreement.rs  key_derivation.rs  key_management.rs  lib.rs  lifecycle.rs  pop_token.rs  rotation.rs  rotation_scheduler.rs  signing.rs  telemetry.rs  vault.rs
crates/crypto/tests/: proptest.proptest-regressions  proptest.rs  vault_integration.rs
crates/discovery/: Cargo.toml  README.md
crates/discovery/examples/: simple_discovery.rs
crates/discovery/src/: ble.rs  error.rs  gatt.rs  lib.rs  manager.rs  mdns.rs  network_monitor.rs  protocol.rs  types.rs
crates/experience/: Cargo.toml
crates/experience/src/: lib.rs  sdk.rs  wasm.rs
crates/keychain/: Cargo.toml
crates/keychain/src/: lib.rs
crates/physical-adapter/: Cargo.toml  README.md
crates/physical-adapter/src/: adapter.rs  lib.rs  registry.rs  traits.rs
crates/physical-adapter/tests/: integration_tests.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: error.rs  event_bus.rs  lib.rs  policy.rs  presets.rs  profile.rs  telemetry.rs  types.rs
crates/qos-scheduler/: Cargo.toml
crates/qos-scheduler/src/: lib.rs  scheduler.rs
crates/session-orchestrator/: Cargo.toml
crates/session-orchestrator/src/: error.rs  event_bus.rs  idempotency.rs  lib.rs  metrics.rs  persistence.rs  session.rs  state_machine.rs  telemetry.rs  versioning.rs
crates/telemetry/: Cargo.toml  README.md
crates/telemetry/src/: alert.rs  collector.rs  crypto_metrics.rs  crypto_telemetry_impl.rs  lib.rs  otel.rs  sli.rs  storage.rs  transport_events.rs  transport_telemetry_impl.rs  types.rs
crates/telemetry/tests/: integration_tests.rs  proptest.rs
crates/transport/: Cargo.toml
crates/transport/benches/: transport_benchmarks.rs
crates/transport/src/: cert_pinning.rs  fec.rs  lib.rs  logging.rs  manager.rs  protocol.rs  quic.rs  retry.rs  telemetry.rs  webrtc.rs  wfq.rs
crates/transport/tests/: integration_discovery_transport.rs  integration_full_e2e.rs  integration_qos_transport.rs  proptest.proptest-regressions  proptest.rs
docs/: DATABASE_SETUP.md  NODE_SETUP.md  PRODUCTION_READINESS.md  RUST_SETUP.md  SECTION_3_COMPLETION_REPORT.md  SECURITY_AUDIT.md  TASK_3.3_COMPLETION_REPORT.md  TASK_3.4_COMPLETION_REPORT.md  TASK_3.5_COMPLETION_REPORT.md  TASK_4.1_COMPLETION_REPORT.md  TASK_4.2_COMPLETION_REPORT.md  TASK_4.3_PART1_COMPLETION_REPORT.md  TASK_4.3_PART2_COMPLETION_REPORT.md  TASK_4.3_PART3_COMPLETION_REPORT.md  TASK_4.3_PART_4_COMPLETION_REPORT.md  TASK_4.3_PART_5_PHASE_1_PROGRESS.md  VAULT_SETUP.md  WSL_NOTES.md  WSL_QUICKSTART.md  WSL_SETUP.md
examples/: Cargo.toml  file_transfer.rs  simple_chat.rs
infrastructure/: README.md  docker-compose.db.yml  docker-compose.observability.yml  generate-certs.ps1  generate-certs.sh  loki-config.yaml  otel-collector-config.yaml  prometheus.yml
infrastructure/db-init/: 01-init-timescaledb.sh
scripts/: .env.attendance.example  attendance-reminder.ts  audit-native-deps.js  package-lock.json  package.json  setup-vault-dev.ps1  setup-vault-dev.sh  setup-wsl.sh
spec/: README-broken.md  README.md  final-report.md  requirements-old-server.md  requirements.md  roadmap-implementation.md  roadmap-import.csv  roadmap.md
spec-en/: README.md  requirements.md  roadmap-implementation.md  roadmap-import.csv  roadmap.md
spec-en/api/: control-plane.md
spec-en/architecture/: dataflow.md  dependencies.md  interfaces.md  overview.md  tech-stack.md
spec-en/deployment/: ci-cd.md  infrastructure.md  rollback.md
spec-en/modules/: crypto-trust-anchor.md  session-orchestrator.md
spec-en/notes/: attendance-system.md  decision-log.md  governance.md  meeting-notes.md  review-completion-checklist.md
spec-en/performance/: benchmark.md  scalability.md
spec-en/security/: auth.md  encryption.md  key-management.md  vulnerability.md
spec-en/templates/: document-quality-dod-review.md  test-template.md  ui-template.md
spec-en/testing/: e2e-tests.md  integration-tests.md  metrics.md  unit-tests.md
spec-en/ui/: accessibility.md  animations.md  overview.md  visual-design.md  wireframes.md
spec/api/: control-plane-old-server.md
spec/architecture/: dataflow.md  dependencies.md  interfaces.md  overview.md  tech-stack.md
spec/deployment/: ci-cd.md  infrastructure-old-server.md  infrastructure.md  rollback.md
spec/modules/: crypto-trust-anchor-old-server.md  crypto-trust-anchor.md  experience-layer-old-server.md  experience-layer.md  physical-adapter-old-server.md  physical-adapter.md  policy-profile-engine.md  qos-scheduler-old-server.md  qos-scheduler.md  session-orchestrator.md  (+4 more)
tests/: integration_discovery_transport.rs
ui/: .env.example  .prettierrc.json  PHASE_1_COMPLETE_REPORT.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_3_PROGRESS_REPORT.md  TASK_4.3_PART_5_PHASE_1_COMPLETE.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  (+4 more)
(+77 files in other folders)
