[workspace]
resolver = "2"
members = [
    "backend",
    "crates/core",
    "crates/crypto",
    "crates/transport",
    "crates/qos-scheduler",
    "crates/policy-engine",
    "crates/session-orchestrator",
    "crates/telemetry",
    "crates/physical-adapter",
    "crates/experience",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"
authors = ["HoneyLink Team <team@honeylink.dev>"]
license = "Proprietary"
repository = "https://github.com/HoneyLink-Project/HoneyLink"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"

# Cryptography (RustCrypto - 100% Rust, no C/C++)
x25519-dalek = "2.0"
curve25519-dalek = "4.1"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Observability (OpenTelemetry)
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"

# UUID generation
uuid = { version = "1.11", features = ["v7", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Networking
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hyper = "1.5"
hyper-util = "0.1"
axum = "0.8"

# gRPC (pure Rust implementation)
tonic = "0.12"
prost = "0.13"

# Async channels
async-channel = "2.3"
crossbeam-channel = "0.5"

# Futures
futures = "0.3"
futures-util = "0.3"

# Utilities
hex = "0.4"
async-trait = "0.1"

# Database (for future use)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }

# Configuration
config = "0.14"

# Logging
log = "0.4"

# Testing
proptest = "1.5"
criterion = "0.5"

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
strip = false

[profile.test]
opt-level = 1
