[package]
name = "honeylink-control-plane"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing and telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.26"
opentelemetry-otlp = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "trace"] }
tracing-opentelemetry = "0.26"

# TLS (Pure Rust)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.2"

# JWT verification (Pure Rust)
jsonwebtoken = "9.3"

# Rate limiting
governor = "0.6"
dashmap = "6.1"

# UUID generation
uuid = { version = "1.11", features = ["v7", "serde"] }

# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
config = "0.14"
toml = "0.8"

# Database (Pure Rust PostgreSQL/CockroachDB client)
# NOTE: Temporarily using unchecked queries until DB environment is available for `cargo sqlx prepare`
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Validation
semver = "1.0"

# Crypto primitives (Pure Rust)
x25519-dalek = "2.0"
base64 = "0.22"
sha2 = "0.10"
md5 = "0.7"

# Random generation (Pure Rust)
rand = "0.8"

# Async streams (for SSE)
futures = "0.3"

# Vault integration
vaultrs = "0.7"

# Internal dependencies
honeylink-telemetry = { path = "../crates/telemetry" }
honeylink-crypto = { path = "../crates/crypto" }
honeylink-policy-engine = { path = "../crates/policy-engine" }
honeylink-qos-scheduler = { path = "../crates/qos-scheduler" }

# Forward Error Correction (Pure Rust)
reed-solomon-erasure = "6.0"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-test = "0.4"
http-body-util = "0.1"
