[package]
name = "honeylink-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TOML-based configuration management for HoneyLink P2P networking"

[dependencies]
# Serialization (Pure Rust)
serde = { workspace = true }
toml = { workspace = true }

# Error handling (Pure Rust)
thiserror = { workspace = true }

# Environment variables (Pure Rust)
envy = "0.4" # Pure Rust environment variable deserializer

# File system (Pure Rust, std)
dirs = "5.0" # Pure Rust user directory lookup

[dev-dependencies]
# Testing utilities
tempfile = "3.8" # Pure Rust temporary file handling
