[package]
name = "honeylink-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
honeylink-core = { path = "../core" }

# Cryptography
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

# CLI dependencies (optional, for bin targets)
clap = { version = "4.5", features = ["derive"], optional = true }
base64 = { version = "0.22", optional = true }
chrono = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

# Other
serde = { workspace = true }
serde_bytes = "0.11"
thiserror = { workspace = true }

[features]
default = []
cli = ["clap", "base64", "chrono", "serde_json"]

[[bin]]
name = "honeylink-keygen"
path = "src/bin/keygen.rs"
required-features = ["cli"]

[dev-dependencies]
proptest = { workspace = true }
