[package]
name = "honeylink-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
honeylink-core = { path = "../core" }

# Cryptography
x25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

# CLI dependencies (optional, for bin targets)
clap = { version = "4.5", features = ["derive"], optional = true }
base64 = { version = "0.22" }
chrono = { workspace = true, features = ["serde"] }
serde_json = { version = "1.0" }

# Vault integration
vaultrs = { version = "0.7", optional = true }
tokio = { workspace = true, features = ["rt", "macros"], optional = true }

# Other
serde = { workspace = true }
serde_bytes = "0.11"
thiserror = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }

[features]
default = []
cli = ["clap"]
vault = ["vaultrs", "tokio"]

[[bin]]
name = "honeylink-keygen"
path = "src/bin/keygen.rs"
required-features = ["cli"]

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
