[package]
name = "honeylink-discovery"
version = "0.1.0"
edition = "2021"
authors = ["HoneyLink Project"]
license = "MIT"
description = "P2P device discovery (mDNS + BLE) for HoneyLink"

[dependencies]
# mDNS-SD Pure Rust implementation
mdns-sd = "0.11"

# Local IP detection
local-ip-address = "0.6"

# Network interface enumeration
if-addrs = "0.13"

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Serialization for TXT records
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Core types
honeylink-core = { path = "../core" }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
