[package]
name = "honeylink-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "P2P peer discovery with mDNS and manual peer addition"

[dependencies]
# mDNS-SD Pure Rust implementation
mdns-sd = "0.11"

# Local IP detection
local-ip-address = "0.6"

# Network interface enumeration
if-addrs = "0.13"

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Async trait support for DiscoveryProtocol
async-trait = "0.1"

# Observability
tracing = { workspace = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization for TXT records and GATT protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptographic hashing for GATT device ID
sha2 = "0.10"

# Random number generation for GATT nonces
rand = "0.8"

# Core types
honeylink-core = { path = "../core" }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
