[package]
name = "honeylink-keychain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Platform-agnostic secure credential storage using OS keychains"

[dependencies]
thiserror = { workspace = true }
zeroize = { workspace = true }

# OS keychain integration (Pure Rust)
# Supports Windows Credential Manager, macOS Keychain, Linux Secret Service
keyring = { version = "2.3", default-features = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
