[package]
name = "honeylink-physical-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
honeylink-core = { path = "../core" }
honeylink-transport = { path = "../transport" }

tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"

[dev-dependencies]
proptest = { workspace = true }
