[package]
name = "honeylink-policy-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
honeylink-core = { path = "../core" }
honeylink-crypto = { path = "../crypto" }
honeylink-telemetry = { path = "../telemetry" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
semver = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true, features = ["sync"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
base64 = "0.22"
jsonschema = { version = "0.18", default-features = false }
uuid = { version = "1.11", features = ["v7", "serde"] }

[dev-dependencies]
proptest = { workspace = true }
