[package]
name = "honeylink-session-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
honeylink-core = { path = "../core" }
honeylink-crypto = { path = "../crypto" }
honeylink-policy-engine = { path = "../policy-engine" }

tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = "1.0"
semver = "1.0"
async-trait = "0.1"

[dev-dependencies]
proptest = { workspace = true }
