[package]
name = "honeylink-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
honeylink-core = { path = "../core" }
honeylink-crypto = { path = "../crypto" }

tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
reed-solomon-erasure = "6.0"
crc32fast = "1.4"

[dev-dependencies]
proptest = { workspace = true }
